--- a/src/tsconfig.esm.json
+++ b/src/tsconfig.esm.json
@@ -3,9 +3,9 @@
 		"module": "esnext",
 		"moduleResolution": "node",
 		"outDir": "../out/esm",
-		"declaration": true,
-		"target": "es5",
-		"lib": ["dom", "es5", "es2015.collection", "es2015.iterable", "es2015.promise"],
+		"declaration": false,
+		"target": "ES2020",
+		"lib": ["dom", "ES2020"],
 		"strict": true
 	}
 }
